--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://naveen0013.github.io/esite",
+  "homepage": "http://naveen0013.github.io/newesite",
   "name": "e-site",
   "version": "0.1.0",
   "private": true,
